# ndviewer_light

./: .gitignore  .pre-commit-config.yaml  README.md  TODOS.md  __init__.py  create_shortcut.py  environment.yml  ndviewer_light.py  pyproject.toml  setup.cfg  simulate_live_acquisition.py  simulate_push_acquisition.py  simulate_zarr_acquisition.py
.github/workflows/: build-appimage.yml  build-installer.yml  build-mac-app.yml  ci.yml
docs/: zarr_viewer_architecture.md
installer/: build.bat  build.sh  build_appimage.sh  entry.py  functional_test.py  import_walker.py  ndviewer_light.desktop  ndviewer_light.nsi  ndviewer_light.spec  ndviewer_light_linux.spec  ndviewer_light_mac.spec  patch_vispy_blackwell.py  pre_build_check.py  scan_dlls.py  scan_libs.py  smoke_test.py  test_all.bat  test_all.sh
ndviewer_light/: __init__.py  core.py  data.py
tests/: README.md  __init__.py  test_3d_visualization.py  test_3d_volume_rendering.py  test_channel_names.py  test_data_structure_changed.py  test_downsampling_wrapper.py  test_freeze_imports.py  test_get_fov_list.py  test_metadata_extraction.py  test_playback_speed.py  test_push_api.py  test_push_subset.py  test_subset_fovs.py  test_ui_font_size.py  test_well_overlay.py  test_zarr_push_api.py  test_zarr_v3.py
