[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "ndviewer_light"
version = "0.1.0"
description = "Minimal NDV-based viewer for viewing 5-D acquisitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "tifffile",
    "dask",
    "xarray",
    "superqt",
    "pyqt5",
    "vispy",
    "tensorstore",
    "ndv>=0.4.0,<0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ndviewer_light"]

[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# F821: undefined name - catches the bug we just fixed
# F401: unused import
# F841: unused variable
select = ["F821", "F401", "F841"]
ignore = []
