[metadata]
name = ndviewer_light
version = 0.1.0

[options]
packages = ndviewer_light
python_requires = >=3.10
install_requires =
    numpy
    scipy
    tifffile
    zarr
    dask
    xarray
    superqt
    pyqt5
    vispy
    tensorstore
    ndv>=0.4.0,<0.5.0

[options.entry_points]
console_scripts =
    ndviewer-light = ndviewer_light.core:main
